kuma-gateway-api/kubernetes/03_httproute/03_httproute_header.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: chuck-header
  namespace: kuma-demo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kuma
  hostnames:
    - "kongme.sh"
  rules:
    - matches:
        - headers:
            - name: quote
              value: roundhousekick
              type: Exact
      backendRefs:
        - name: chuck-norris-quote-service
          port: 8080
