kuma-gateway-api/kubernetes/03_httproute/03_httproute_host.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: back2future-host
  namespace: kuma-demo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kuma
  hostnames:
    - "back2future.kongme.sh"
  rules:
    - backendRefs:
        - name: back2future-quote-service
          port: 8080
          kind: Service
          weight: 1
