kuma-gateway-api/kubernetes/03_httproute/03_httproute_path.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: back2future-path
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kuma
  hostnames:
    - "kongme.sh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /back2future
      backendRefs:
        - name: back2future-quote-service
          port: 8080
